--- a/VSUQSM/src/app/features/desk-attendant-layout/desk-attendant-layout.component.html
+++ b/VSUQSM/src/app/features/desk-attendant-layout/desk-attendant-layout.component.html
@@ -1,12 +1,9 @@
-<div class="h-dvh w-dvw flex bg-tertiary-tw overflow-hidden">
-    <div class="h-full w-[300px] z-20 flex-shrink-0">
-      <div class="w-full h-full bg-primary-tw text-primary-text-tw overflow-y-auto">
-        <app-sidebar></app-sidebar>
-      </div>
-    </div>
-    
-    <div class="flex-1 overflow-hidden bg-[#22381F]">
-      <div class="bg-white rounded-l-xl p-8 h-full overflow-y-auto">
-        <router-outlet></router-outlet>
-        </div>
+<div class="h-screen w-screen flex overflow-hidden">
+  <!-- Sidebar -->
+  <app-da-sidebar></app-da-sidebar>
+
+  <!-- Main Content -->
+  <div class="flex-1 overflow-auto bg-gray-100">
+    <router-outlet></router-outlet>
   </div>
+</div>
